--- a/styles/summary.css
+++ b/styles/summary.css
@@ -397,13 +397,23 @@ body {
   }
 }
 
-@media (max-width: 1500px) {
+@media (min-width: 1100px) and (max-width: 1400px) {
+  .greeting-text-summary {
+    font-size: 32px !important;
+  }
+  .greetin p {
+    font-size: 24px;
+  }
+
   .greetin {
-    display: none;
+    margin-left: 50px;
   }
 }
 
 @media (max-width: 1000px) {
+  .greetin {
+    display: none;
+  }
   .summaryMain {
     display: flex;
     justify-content: center;
