--- a/styles/board_responisv.css
+++ b/styles/board_responisv.css
@@ -1300,6 +1300,10 @@
   .searchBar {
     width: 85%;
   }
+  .noTask {
+    margin-left: 29px;
+
+  }
  }
 @media(min-width:1000px) and (max-width: 1201px) {
   .taskAria {
