--- a/styles/board.css
+++ b/styles/board.css
@@ -518,16 +518,7 @@
   align-items: center;
 }
 
-.TechnicalTask {
-  padding: 4px 24px;
-  border-radius: 8px;
-  background: #1fd7c1;
-  color: #fff;
-  font-family: "open-sans", sans-serif;
-  font-size: 23px;
-  font-weight: 400;
-  line-height: 27.6px;
-}
+
 
 .largCardHeader button {
   border: 0;
@@ -930,7 +921,18 @@
   border: solid;
   font-family: "Inter", sans-serif;
 }
-
+.circleAvatarBoardChecked {
+  border-radius: 45px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 42px;
+  height: 42px;
+  color: white;
+  font-size: 24px;
+  border: solid;
+  font-family: "Inter", sans-serif;
+}
 .custom-checkbox-board {
   margin-left: 3px;
 }
@@ -1714,4 +1716,26 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 .leadsToBoard a {
   text-decoration: none;
   width: 100%;
+}
+
+
+.smallCardcategory {
+  display: flex;
+  align-items: center;
+  gap: 7px;
+  padding: 5px;
+}
+.smallCardcategory img {
+  width: 15px;
+  height: 15px;
+  cursor: pointer;
+  background-color: transparent;
+  border-radius: 50%;
+  padding: 5px;
+}
+.smallCardcategory img:hover {
+  width: 15px;
+  height: 15px;
+  cursor: pointer;
+  background-color: rgba(100, 99, 99, 0.37);
 }
